manifest/deployment_readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app_name
  template:
    metadata:
      labels:
        app: app_name
    spec:
      containers:
      - name: app_name
        image: aichalo/sitewebduprof:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
