manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app_name
spec:
  selector:
    app: app_name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
